force-app/main/default/objects/Task__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Health</fullName><default>false</default><label>Health</label></value>
            <value><fullName>Career</fullName><default>false</default><label>Career</label></value>
            <value><fullName>Discipline</fullName><default>false</default><label>Discipline</label></value>
            <value><fullName>Fitness</fullName><default>false</default><label>Fitness</label></value>
            <value><fullName>Learning</fullName><default>false</default><label>Learning</label></value>
            <value><fullName>Personal</fullName><default>false</default><label>Personal</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>