force-app/main/default/objects/Task__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>false</default><label>Low (0.3)</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium (0.5)</label></value>
            <value><fullName>High</fullName><default>false</default><label>High (0.8)</label></value>
            <value><fullName>Critical</fullName><default>false</default><label>Critical (1.0)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>