force-app/main/default/objects/Task__c/fields/Target_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Target_Quantity__c</fullName>
    <label>Target Quantity</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Target number for the task (e.g., 8 for "8 glasses of water")</description>
</CustomField>