force-app/main/default/objects/Task__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
                <default>true</default>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>Toggle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>